keep working at home

--- a/src/models/excess_gibbs/trying.ipynb
+++ b/src/models/excess_gibbs/trying.ipynb
@@ -44,24 +44,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.42323225098096795, -0.42323225098096795],\n",
-       " [-0.423232250980968, 0.42323225098096795]]"
+       "array([-164.27158219,   -0.24513258])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.log(model.gammas())\n"
+    "np.log(model.gammas())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[-0.5147891864518135, 0.5147891864518135],\n",
+       "  [-0.33167531551012225, 0.33167531551012236]],\n",
+       " [[-0.33167531551012225, 0.33167531551012236],\n",
+       "  [1.178139817472058, -1.1781398174720588]]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.d2phis_dxixjs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (243535342.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    -0.16475107936314445        1.4877670830442866\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    " -0.51478918645181371      -0.33167531551012225      -0.33167531551012225        1.1781398174720583     \n",
+    "  0.51478918645181371       0.33167531551012247       0.33167531551012247       -1.1781398174720581 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
