--- a/src/models/excess_gibbs/trying.ipynb
+++ b/src/models/excess_gibbs/trying.ipynb
@@ -64,46 +64,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[-0.5147891864518135, 0.5147891864518135],\n",
-       "  [-0.33167531551012225, 0.33167531551012236]],\n",
-       " [[-0.33167531551012225, 0.33167531551012236],\n",
-       "  [1.178139817472058, -1.1781398174720588]]]"
+       "[-1341.6525317420947, -2.0381456895023575]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.d2phis_dxixjs()"
+    "model.d2nGE_dTdns()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (243535342.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    -0.16475107936314445        1.4877670830442866\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    " -0.51478918645181371      -0.33167531551012225      -0.33167531551012225        1.1781398174720583     \n",
-    "  0.51478918645181371       0.33167531551012247       0.33167531551012247       -1.1781398174720581 "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
