miss a file save

--- a/src/models/excess_gibbs/trying.ipynb
+++ b/src/models/excess_gibbs/trying.ipynb
@@ -64,30 +64,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-1341.6525317420947, -2.0381456895023575]"
+       "[-1349.966994360248, -10.352608307655686]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.d2nGE_dTdns()"
+    "model.d2GE_dTdxs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (496621443.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    -0.51478918645181371      -0.33167531551012225      -0.33167531551012225        1.1781398174720583\u001b[0m\n\u001b[0m                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    " -0.51478918645181371      -0.33167531551012225      -0.33167531551012225        1.1781398174720583     \n",
+    "  0.51478918645181371       0.33167531551012247       0.33167531551012247       -1.1781398174720581 "
+   ]
   }
  ],
  "metadata": {
