--- a/python/docs/source/tutorial/instantiate_model.ipynb
+++ b/python/docs/source/tutorial/instantiate_model.ipynb
@@ -38,6 +38,7 @@
       "- excess_gibbs: Excess Gibbs energy models\n",
       "    - NRTL: non-random two-liquid model\n",
       "    - UNIFACVLE: Original UNIFAC VLE model\n",
+      "    - UNIQUAC: UNIversal QUAsiChemical Excess Gibbs free energy model\n",
       "\n",
       "- residual_helmholtz: Residual Helmholtz energy models\n",
       "    - Cubic EoS:\n",
