Python tutorial little fix

--- a/python/docs/source/tutorial/instantiate_model.ipynb
+++ b/python/docs/source/tutorial/instantiate_model.ipynb
@@ -346,10 +346,10 @@
     "    Then we use the phi variable to calculate fugacities:\n",
     "\n",
     "    ```python\n",
-    "    fugacity = n * phi * P\n",
+    "    fugacity = z * phi * P\n",
     "    ```\n",
     "\n",
-    "    Which means: $f = n \\; \\phi \\; P$\n",
+    "    Which means: $f = z \\; \\phi \\; P$\n",
     "\n",
     "## ArModel properties listing\n",
     "All the properties that can be calculated with an ArModel instance can be found\n",
