--- a/python/docs/source/tutorial/getting_started.ipynb
+++ b/python/docs/source/tutorial/getting_started.ipynb
@@ -64,7 +64,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "yaeos",
    "language": "python",
    "name": "python3"
   },
