--- a/python/docs/source/tutorial/more_calculations.ipynb
+++ b/python/docs/source/tutorial/more_calculations.ipynb
@@ -771,7 +771,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculation of critical points"
+    "## Critical lines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculation of critical points"
    ]
   },
   {
@@ -799,6 +806,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculation of critical lines"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -815,7 +829,7 @@
     }
    ],
    "source": [
-    "cl = model.critical_line(z0=[1, 0], zi=[0, 1], a0=1e-2, S=1e-2)\n",
+    "cl = model.critical_line(z0=[1, 0], zi=[0, 1], a0=1e-2, s=1e-2)\n",
     "\n",
     "plt.plot(cl[\"a\"], cl[\"P\"])\n",
     "\n",
