--- a/notebooks/run_online.ipynb
+++ b/notebooks/run_online.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "# Test yaeos features here!\n",
     "\n",
-    "This online notebook let's you run yaeos. It is possible to copy and paste\n",
+    "This online notebook lets you run yaeos. It is possible to copy and paste\n",
     "snippets of code from the [Tutorial section](https://ipqa-research.github.io/yaeos/page/python-api/tutorial/tutorial_tree.html)."
    ]
   },
