--- a/python/docs/source/tutorial/more_calculations.ipynb
+++ b/python/docs/source/tutorial/more_calculations.ipynb
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model definition\n",
+    "### Model definition\n",
     "We first define a model that will be used for all the possible calculations."
    ]
   },
