--- a/python/docs/source/tutorial/more_calculations.ipynb
+++ b/python/docs/source/tutorial/more_calculations.ipynb
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -867,8 +867,8 @@
     "\n",
     "tx = model.phase_envelope_tx(z0=z0, zi=zi, pressure=1, t0=250, ds0=0.01, a0=0.01)\n",
     "\n",
-    "plt.plot(tx[\"x\"][:, 0], tx[\"T\"], marker=\"o\", label=\"Bubble\")\n",
-    "plt.plot(tx[\"y\"][:, 0], tx[\"T\"], marker=\"o\", label=\"Dew\")\n",
+    "plt.plot(tx.main_phases_compositions[:, 0, 0], tx[\"T\"], marker=\"o\", label=\"Bubble\")\n",
+    "plt.plot(tx.reference_phase_compositions[:, 0], tx[\"T\"], marker=\"o\", label=\"Dew\")\n",
     "\n",
     "plt.xlabel(r\"$x_1,y_1$\")\n",
     "plt.ylabel(r\"Temperature [K]\")\n",
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -910,8 +910,8 @@
     "    z0=z0, zi=zi, pressure=1, t0=200, a0=0.9999, ds0=-0.01\n",
     ")\n",
     "\n",
-    "plt.plot(tx[\"x\"][:, 0], tx[\"T\"], marker=\"o\", label=\"Dew\")\n",
-    "plt.plot(tx[\"y\"][:, 0], tx[\"T\"], marker=\"o\", label=\"Bubble\")\n",
+    "plt.plot(tx.main_phases_compositions[:, 0, 0], tx[\"T\"], marker=\"o\", label=\"Dew\")\n",
+    "plt.plot(tx.reference_phase_compositions[:, 0], tx[\"T\"], marker=\"o\", label=\"Bubble\")\n",
     "plt.legend()\n",
     "plt.xlim(0, 1)\n",
     "plt.xlabel(r\"$x_1,y_1$\")\n",
