--- a/python/docs/source/tutorial/fitting.ipynb
+++ b/python/docs/source/tutorial/fitting.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
     "import yaeos\n",
     "from yaeos.fitting import BinaryFitter\n",
     "\n",
-    "BinaryFitter?"
+    "?BinaryFitter"
    ]
   },
   {
