Well lets sphinxing in general

--- a/python/docs/source/tutorial/getting_started.ipynb
+++ b/python/docs/source/tutorial/getting_started.ipynb
@@ -52,12 +52,7 @@
     "  IN_COLAB = False\n",
     "\n",
     "if IN_COLAB:\n",
-    "  !git clone https://github.com/ipqa-research/yaeos.git\n",
-    "  %cd yaeos\n",
-    "  !git checkout dev\n",
-    "  %pip install ./python\n",
-    "  %cd ..\n",
-    "  %rm -r yaeos\n",
+    "  %pip install 'git+https://github.com/ipqa-research/yaeos.git@dev#subdirectory=python'\n",
     "```"
    ]
   }
