--- a/python/docs/source/tutorial/gerg2008.ipynb
+++ b/python/docs/source/tutorial/gerg2008.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2f571eac",
    "metadata": {},
    "outputs": [
@@ -78,8 +78,7 @@
     "# Define the model to use\n",
     "model = yaeos.GERG2008([\"methane\", \"n-butane\", \"decane\"])\n",
     "\n",
-    "# Make a flash calculation at \n",
-    "\n",
+    "# Calculate the phase envelope at a specific composition\n",
     "z = [0.4, 0.2, 0.4]\n",
     "model.phase_envelope_pt(z, kind=\"bubble\", max_points=500).plot()"
    ]
