--- a/python/docs/source/tutorial/equations_of_state/1_bulk_properties.ipynb
+++ b/python/docs/source/tutorial/equations_of_state/1_bulk_properties.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ff68069c",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "86c6989c",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "56.000067835576885"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "6905a67e",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "6a1beaa6",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "array([-1.12084851, -1.61086   ])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "bf18174c",
    "metadata": {},
    "outputs": [
@@ -220,6 +220,301 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6399604f",
+   "metadata": {},
+   "source": [
+    "You can evaluate fugacity by simply:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f38aea95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fugacities:  [9.12809679 5.59204872]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "p = model.pressure(n, V, T)  # Calculate pressure [bar]\n",
+    "\n",
+    "z = n / np.sum(n)            # Calculate mole fractions\n",
+    "\n",
+    "fugacities = np.exp(lnphi) * z * p\n",
+    "\n",
+    "print(\"Fugacities: \", fugacities)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45d01fc4",
+   "metadata": {},
+   "source": [
+    "### Residual Gibbs Energy $G^r(n, V, T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "de21a88b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-713.3048693974467"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "V = 1.0         # volume [L]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "model.gibbs_residual_vt(n, V, T) # Calculate residual Gibbs energy [bar L]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42bea797",
+   "metadata": {},
+   "source": [
+    "We could ask for all the derivatives as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1376ab42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual Gibbs Energy:  -713.3048693974467\n",
+      "Derivatives:  {'dt': 3.81552793271931, 'dv': -398.1289412715064, 'dn': array([-11.52100055, -51.51418507])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asking for all the derivatives\n",
+    "Gr, derivatives = model.gibbs_residual_vt(n, V, T, dt=True, dv=True, dn=True)\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Residual Gibbs Energy: \", Gr)\n",
+    "print(\"Derivatives: \", derivatives)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "003e87ae",
+   "metadata": {},
+   "source": [
+    "### Residual Enthalpy $H^r(n, V, T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0e3b5062",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-12371.76213001435"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "V = 1.0         # volume [L]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "model.enthalpy_residual_vt(n, V, T) / 10 * 100 # Calculate residual Enthalpy [bar L]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afb48efb",
+   "metadata": {},
+   "source": [
+    "We could ask for all the derivatives as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f15b0810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual Enthalpy:  -1237.176213001435\n",
+      "Derivatives:  {'dt': 2.7262269081225208, 'dv': 222.65809494029838, 'dn': array([-130.30843347, -161.65842812])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asking for all the derivatives\n",
+    "Hr, derivatives = model.enthalpy_residual_vt(n, V, T, dt=True, dv=True, dn=True)\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Residual Enthalpy: \", Hr)\n",
+    "print(\"Derivatives: \", derivatives)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67a3d0d",
+   "metadata": {},
+   "source": [
+    "### Residual Entropy $S^r(n, V, T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5fa1d37f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.746237812013294"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "V = 1.0         # volume [L]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "model.entropy_residual_vt(n, V, T) # Calculate residual Entropy [bar L / K]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30224622",
+   "metadata": {},
+   "source": [
+    "We could ask for all the derivatives as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d41409c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual Entropy:  -1.746237812013294\n",
+      "Derivatives:  {'dt': 0.0021897892913883494, 'dv': 2.069290120706016, 'dn': array([-0.39595811, -0.36714748])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asking for all the derivatives\n",
+    "Sr, derivatives = model.entropy_residual_vt(n, V, T, dt=True, dv=True, dn=True)\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Residual Entropy: \", Sr)\n",
+    "print(\"Derivatives: \", derivatives)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "280a119b",
+   "metadata": {},
+   "source": [
+    "### Residual heat Capacity at constant volume $C_V^r(n, V, T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e7cc6b25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6569367874165049"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "V = 1.0         # volume [L]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "model.cv_residual_vt(n, V, T) # Calculate residual heat capacity [bar L / K]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebd4fa3b",
+   "metadata": {},
+   "source": [
+    "### Residual Heat Capacity at constant pressure $C_P^r(n, V, T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "15d3ba36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.72361653132665"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "V = 1.0         # volume [L]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "model.cp_residual_vt(n, V, T) # Calculate residual heat capacity [bar L / K]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce69f064",
    "metadata": {},
    "source": [
@@ -239,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d74a70ff",
    "metadata": {},
    "outputs": [
@@ -249,7 +544,7 @@
        "245.62683294458913"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
