adding more function to ArModel

--- a/python/docs/source/tutorial/equations_of_state/1_bulk_properties.ipynb
+++ b/python/docs/source/tutorial/equations_of_state/1_bulk_properties.ipynb
@@ -34,18 +34,18 @@
     "calculated from the pure components parameters using a mixing rule.\n",
     "\n",
     "The modern way of defining an EOS is through a mathematical model that express\n",
-    "the residual Helmholtz free energy as a function of the mole number, volume and\n",
-    "temperature. This approach is more general and allows for a more flexible\n",
-    "definition of the EOS in the context of implementing it in code. All\n",
+    "the residual Helmholtz free energy as a function of the mole number vector,\n",
+    "volume and temperature. This approach is more general and allows for a more\n",
+    "flexible definition of the EOS in the context of implementing it in code. All\n",
     "thermodynamic properties can be calculated from the residual Helmholtz free\n",
     "energy and its derivatives. `yaeos` is based on this approach.\n",
     "\n",
     "$$\n",
-    "    A^{r}(n, V, T) = -\\int_{\\infty}^{V} \\left(P(n,V,T) - \\frac{nRT}{V} \\right) dV\n",
+    "    A^{r}(\\vec{n}, V, T) = -\\int_{\\infty}^{V} \\left(P(\\vec{n},V,T) - \\frac{nRT}{V} \\right) dV\n",
     "$$\n",
     "\n",
-    "**If you want to know how each bulk property is calculated from the residual\n",
-    "Helmholtz free energy, please refer to the [Fortran User Documentation](https://ipqa-research.github.io/yaeos/page/index.html)**\n",
+    "If you want to know how each bulk property is calculated from the residual\n",
+    "Helmholtz free energy, please refer to the [Fortran User Documentation](https://ipqa-research.github.io/yaeos/page/index.html)\n",
     "\n",
     "## Example model\n",
     "First, we are going the import the `yaeos` library and instantiate a\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ff68069c",
    "metadata": {},
    "outputs": [],
@@ -81,9 +81,9 @@
    "metadata": {},
    "source": [
     "## Properties function of Volume and Temperature $\\left(V, T \\right)$\n",
-    "We can obtain different bulk properties from a $A^r$ model specifying the\n",
-    "number of moles, volume and temperature. But also, derivatives could be \n",
-    "obtained if asked for.\n",
+    "We can obtain different bulk properties from a $A^r(\\vec{n}, V, T)$ model\n",
+    "specifying the number of moles, volume and temperature. But also, derivatives\n",
+    "could be obtained if asked for.\n",
     "\n",
     "All not asked derivatives will be set as `None`. The derivatives are returned\n",
     "as a Python dictionary with the keys `dv`, `dt`, and `dn`, etc. respectively.\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "86c6989c",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "56.000067835576885"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,12 +125,20 @@
    "id": "ba929595",
    "metadata": {},
    "source": [
-    "We could ask for derivatives as follows:"
+    "You can obtain the next derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial P}{\\partial V}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial P}{\\partial T}\\right)_{V, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial P}{\\partial n_i}\\right)_{V, T, n_{j \\neq i}}\n",
+    "$$\n",
+    "\n",
+    "Ask for derivatives as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6905a67e",
    "metadata": {},
    "outputs": [
@@ -157,7 +165,7 @@
    "id": "b21e6aa9",
    "metadata": {},
    "source": [
-    "### Logarithm of fugacity coefficients $ln \\, \\phi(n,V,T)$"
+    "### Logarithm of fugacity coefficients $ln \\, \\phi(\\vec{n},V,T)$"
    ]
   },
   {
@@ -182,7 +190,7 @@
     "V = 1.0         # volume [L]\n",
     "T = 300.0       # temperature [K]\n",
     "\n",
-    "model.lnphi_vt(n, V, T) # Calculate [bar]"
+    "model.lnphi_vt(n, V, T)"
    ]
   },
   {
@@ -190,12 +198,21 @@
    "id": "3c27c00c",
    "metadata": {},
    "source": [
-    "We could ask for all the derivatives as follows:"
+    "You can obtain the next derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial ln \\, \\hat{\\phi}_i}{\\partial T}\\right)_{P, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial ln \\, \\hat{\\phi}_i}{\\partial P}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial ln \\, \\hat{\\phi}_i}{\\partial n_j}\\right)_{P, T, n_{k \\neq j}}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Ask for derivatives as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bf18174c",
    "metadata": {},
    "outputs": [
@@ -211,7 +228,7 @@
    ],
    "source": [
     "# Asking for all the derivatives\n",
-    "lnphi, derivatives = model.lnphi_vt(n, V, T, dp=True, dt=True, dn=True)\n",
+    "lnphi, derivatives = model.lnphi_vt(n, V, T, dt=True, dp=True, dn=True)\n",
     "\n",
     "# Displaying results\n",
     "print(\"Logarithm of Fugacity Coefficients: \", lnphi)\n",
@@ -228,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f38aea95",
    "metadata": {},
    "outputs": [
@@ -242,6 +259,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "\n",
     "\n",
     "p = model.pressure(n, V, T)  # Calculate pressure [bar]\n",
     "\n",
@@ -257,12 +275,12 @@
    "id": "45d01fc4",
    "metadata": {},
    "source": [
-    "### Residual Gibbs Energy $G^r(n, V, T)$"
+    "### Residual Gibbs Energy $G^r(\\vec{n}, V, T)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "de21a88b",
    "metadata": {},
    "outputs": [
@@ -272,7 +290,7 @@
        "-713.3048693974467"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,12 +308,20 @@
    "id": "42bea797",
    "metadata": {},
    "source": [
-    "We could ask for all the derivatives as follows:"
+    "You can obtain the next derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial G^{r}_{(\\vec{n}, V, T)}}{\\partial T}\\right)_{V, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial G^{r}_{(\\vec{n}, V, T)}}{\\partial V}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial G^{r}_{(\\vec{n}, V, T)}}{\\partial n_j}\\right)_{V, T, n_{i \\neq j}}\n",
+    "$$\n",
+    "\n",
+    "Ask for derivatives as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "1376ab42",
    "metadata": {},
    "outputs": [
@@ -322,22 +348,22 @@
    "id": "003e87ae",
    "metadata": {},
    "source": [
-    "### Residual Enthalpy $H^r(n, V, T)$"
+    "### Residual Enthalpy $H^r(\\vec{n}, V, T)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "0e3b5062",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-12371.76213001435"
+       "-1237.176213001435"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +373,7 @@
     "V = 1.0         # volume [L]\n",
     "T = 300.0       # temperature [K]\n",
     "\n",
-    "model.enthalpy_residual_vt(n, V, T) / 10 * 100 # Calculate residual Enthalpy [bar L]"
+    "model.enthalpy_residual_vt(n, V, T) # Calculate residual Enthalpy [bar L]"
    ]
   },
   {
@@ -355,12 +381,20 @@
    "id": "afb48efb",
    "metadata": {},
    "source": [
-    "We could ask for all the derivatives as follows:"
+    "You can obtain the next derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial H^{r}_{(\\vec{n}, V, T)}}{\\partial T}\\right)_{V, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial H^{r}_{(\\vec{n}, V, T)}}{\\partial V}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial H^{r}_{(\\vec{n}, V, T)}}{\\partial n_j}\\right)_{V, T, n_{i \\neq j}}\n",
+    "$$\n",
+    "\n",
+    "Ask for derivatives as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "f15b0810",
    "metadata": {},
    "outputs": [
@@ -392,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "5fa1d37f",
    "metadata": {},
    "outputs": [
@@ -402,7 +436,7 @@
        "-1.746237812013294"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,12 +454,20 @@
    "id": "30224622",
    "metadata": {},
    "source": [
-    "We could ask for all the derivatives as follows:"
+    "You can obtain the next derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial S^{r}_{(\\vec{n}, V, T)}}{\\partial T}\\right)_{V, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial S^{r}_{(\\vec{n}, V, T)}}{\\partial V}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial S^{r}_{(\\vec{n}, V, T)}}{\\partial n_j}\\right)_{V, T, n_{i \\neq j}}\n",
+    "$$\n",
+    "\n",
+    "Ask for derivatives as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "d41409c5",
    "metadata": {},
    "outputs": [
@@ -457,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "e7cc6b25",
    "metadata": {},
    "outputs": [
@@ -467,7 +509,7 @@
        "0.6569367874165049"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "15d3ba36",
    "metadata": {},
    "outputs": [
@@ -500,7 +542,7 @@
        "3.72361653132665"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
