--- a/python/docs/source/tutorial/getting_started.ipynb
+++ b/python/docs/source/tutorial/getting_started.ipynb
@@ -5,34 +5,41 @@
    "id": "574ddc9a",
    "metadata": {},
    "source": [
-    "# Getting started\n",
+    "# Getting Started\n",
+    "\n",
     "## Using This Documentation\n",
-    "`yaeos` is a Fortran library of thermodynamic equations of state (EOS). If you\n",
-    "are reading this, probably you want to use `yaeos` in your Python code.\n",
     "\n",
-    "In `yaeos` the mathematical models are implemented in Fortran. The Python\n",
-    "functions just call the Fortran routines via a `C` interface (compiled with\n",
-    "`numpy.f2py`) and return the results to Python. Even if you are not interested\n",
-    "in the Fortran side and you only want to use the Python API, you should know\n",
-    "the following:\n",
+    "`yaeos` is a Fortran library of thermodynamic equations of state (EOS).\n",
+    "If you're reading this, you're probably looking to use `yaeos` from Python.\n",
     "\n",
-    ">> The documentation is divided in two parts, the Fortran side and the Python\n",
-    ">> side. The Python side Tutorial and API documentation has all the information\n",
-    ">> you need to use all the functions and classes in the Python API. But, **the\n",
-    ">> Fortran side documentation also have more information of each EOS, like the\n",
-    ">> mathematical expressions, derivatives, and bibliographic references** that\n",
-    ">> may be useful for you to understand the models and how to use them.\n",
+    "Under the hood, all thermodynamic models are implemented in Fortran. The Python\n",
+    "API provides simple functions that call these Fortran routines through a `C`\n",
+    "interface (compiled using `numpy.f2py`).\n",
     "\n",
-    ">> **You should follow the Python documentation until you want to know more\n",
-    ">> about a model, the meaning of his parameters, or the mathematical\n",
-    ">> expressions**. For that please refer to the Fortran user documentation:\n",
+    "If you're only interested in using `yaeos` from Python, that's totally fine —\n",
+    "but keep in mind the following:\n",
     "\n",
-    ">> [Fortran User Documentation](https://ipqa-research.github.io/yaeos/page/index.html)\n",
+    "> The documentation is divided into two parts: **Python-side** and\n",
+    "> **Fortran-side**.\n",
     "\n",
+    "> The Python tutorial and API reference contain everything you need to work\n",
+    "> with the Python interface.\n",
+    "\n",
+    "> However, **the Fortran documentation provides additional technical details\n",
+    "> for each model**, such as mathematical expressions, derivatives, and\n",
+    "> bibliographic references. These may be useful if you want to understand the\n",
+    "> models more deeply.\n",
+    "\n",
+    "> **Start with the Python documentation.** Refer to the Fortran documentation\n",
+    "> only if you want to explore a model’s theory, equations, or parameters\n",
+    "> meaning in more detail.\n",
+    "\n",
+    "> [Fortran User Documentation](https://ipqa-research.github.io/yaeos/page/index.html)\n",
     "\n",
     "## Installation Instructions\n",
     "### Local Installation\n",
-    "To install the last version of `yaeos` uploaded to PyPI simply do:\n",
+    "To install the last version of `yaeos` uploaded to\n",
+    "[PyPI](https://pypi.org/project/yaeos/) simply do:\n",
     "\n",
     "```shell\n",
     "pip install yaeos\n",
@@ -81,10 +88,11 @@
     "```\n",
     "\n",
     "## Installation For Developers\n",
-    "If you want to contribute to `yaeos` you may want to install the Python API\n",
-    "in development mode. This will allow you to edit the code and test it without\n",
-    "having to reinstall it every time you make a change on the Python side. For\n",
-    "that you can do the following:\n",
+    "If you want to contribute to `yaeos`, you may want to install the Python API in\n",
+    "development mode. This lets you edit the code and test your changes without\n",
+    "having to reinstall the package every time you modify the Python code.\n",
+    "\n",
+    "To do this, run the following:\n",
     "\n",
     "```shell\n",
     "git clone https://github.com/ipqa-research/yaeos.git\n",
